Fixed spacing between ticket and share buttons when there is no press.

--- a/sites/all/themes/at2015/sass/_page-styles.scss
+++ b/sites/all/themes/at2015/sass/_page-styles.scss
@@ -52,6 +52,7 @@
     float: right;
     display: inline-block;
     margin: -0.93em 1em;
+    position: static !important;
     &:last-of-type {
         margin-right: 0;
     }
